2004-04-28  Lars Clausen  <lars@raeder.dk>

	* app/Makefile.am: New files diacanvas.[ch]

	* app/interface.c (create_display_shell): Use new diacanvas that
	allows placing widgets on canvas, for text edit.

	* lib/object.h: 
	Early work towards rotation.  No implementation yet.

	* app/layer_dialog.c (undo_layer): 
	* objects/network/bus.c (bus_create_change): 
	* objects/standard/box.c (aspect_create_change): 
	* objects/standard/ellipse.c (aspect_create_change): 
	Use g_new0 for change struct.

	* app/undo.c (diagram_change_apply_or_revert): 
	Support for undo of diagram properties and page setup.

	* app/disp_callbacks.c (ddisplay_canvas_events): 
	* lib/text.h: 
	* lib/diagramdata.h: 
	* app/modify_tool.c (click_select_object): 
	* lib/text.c (text_register_editable): 
	Starting work on new text editing model.  Guarded by #ifdef so
	far. 

2004-04-07  Lars Clausen  <lars@raeder.dk>

	* app/recent_files.c (open_recent_file_callback): 
	* app/interface.c (origin_button_press): 
	* app/filedlg.c (file_open_ok_callback): 
	* app/display.c: 
	* app/diagram.[ch]: 
	* app/commands.c (dialogs_layers_callback): Using new
	diagram_set_current() function to ensure auxilliary windows are
	updated. 

	* app/layer_dialog.c: Trying to unify with dia-props.  Diagram
	menu now borken.  *sniff*

	* app/dia-props.c: Diagram properties window attempted
	persistentified.  Trying to make more like layer dialog (since it
	already changes when the diagram changes), but some things still
	borken.	

2004-04-06  Lars Clausen  <lars@raeder.dk>

	* lib/dialinechooser.[ch] (dia_line_chooser_set_line_style): 
	* lib/attributes.c (attributes_set_default_line_style): 
	* app/interface.c (create_lineprops_area): 
	Make line style persistent as well.  Added function to directly
	set the style and dashlength of a dialinechooser. 

2004-04-03  Lars Clausen  <lars@raeder.dk>

	* objects/standard/ellipse.c (ellipse_move_handle, ellipse_copy):
	Copy the ellipse extra handle correctly.
